--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
         <div>
           <p>You can reach me quickly on WhatsApp or Instagram for collaborations and projects.</p>
           <div style="margin-top:12px">
-            <strong>Email:</strong> <span>ayushyadav123@gmail.com</span>
+            <strong>Email:</strong> <span>yprabhakar565@gmail.com</span>
           </div>
           <div style="margin-top:6px">
-            <strong>Phone:</strong> <span>+91 9876543210</span>
+            <strong>Phone:</strong> <span>+91 7985403528</span>
           </div>
-          <a href="https://wa.me/919876543210?text=Hi%20Ayush,%20I%20want%20to%20work%20with%20you!" target="_blank" style="display:inline-block; margin-top:12px; background:#25D366; color:white; padding:12px 24px; border-radius:8px; text-decoration:none; font-weight:bold;">💬 Chat on WhatsApp</a>
+          <a href="https://wa.me/7985403528?text=Hi%20Ayush,%20I%20want%20to%20work%20with%20you!" target="_blank" style="display:inline-block; margin-top:12px; background:#25D366; color:white; padding:12px 24px; border-radius:8px; text-decoration:none; font-weight:bold;">💬 Chat on WhatsApp</a>
         </div>
         <aside class="card">
           <form>
