--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <ul>
           <li><a href="#services">Services</a></li>
           <li><a href="#work">Work</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -110,6 +111,7 @@
     <div class="mobile-menu" id="mobileMenu">
       <a href="#services">Services</a>
       <a href="#work">Work</a>
+      <a href="#projects">Projects</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </div>
@@ -205,6 +207,48 @@
         </article>
       </div>
     </section>
+
+    <section id="projects">
+      <h2 style="margin-top:28px">My Projects</h2>
+      <div class="grid">
+        <article class="proj fade-in">
+          <span class="proj-label">Web App</span>
+          <span class="proj-icon" title="Live"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden><path d="M14 3h7v7" stroke="#0A192F" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="#0A192F" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3" stroke="#0A192F" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+          <a href="https://ayush-7985.github.io/stocks-calculator/" target="_blank" rel="noopener">
+            <img src="https://i.ibb.co/5h5RCkPz/stock.png" alt="Ayush Portfolio Manager Screenshot">
+          </a>LdCZBr3q
+          <div style="padding:12px">
+            <strong>Ayush Portfolio Manager</strong>
+            <p style="margin:6px 0 0;font-size:13px;color:#445">
+              A stock calculator web app to manage portfolio, track profit/loss, and set price targets.
+              Built mobile-friendly & works offline.
+            </p>
+            <p style="margin:4px 0 0;font-size:12px;color:#666">
+              <a href="https://ayush-7985.github.io/stocks-calculator/" target="_blank" rel="noopener">🔗 View Live</a>
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+    <article class="proj fade-in">
+  <span class="proj-label">PROJECT_LABEL</span> <!-- e.g., Web App, Design, MVP -->
+  <span class="proj-icon" title="PROJECT_LABEL">
+    <!-- optional SVG icon, copy from existing project -->
+  </span>
+  <a href="https://ayush-innovations.my.canva.site/ayush" target="_blank" rel="noopener">
+    <img src="PROJECT_IMAGE_LINK" alt="PROJECT_NAME">
+  </a>
+  <div style="padding:12px">
+    <strong>PROJECT_NAME</strong>
+    <p style="margin:6px 0 0;font-size:13px;color:#445">
+      PROJECT_DESCRIPTION
+    </p>
+    <p style="margin:4px 0 0;font-size:12px;color:#666">
+      <a href="https://ayush-innovations.my.canva.site/ayush" target="_blank" rel="noopener">🔗 View Live</a>
+    </p>
+  </div>
+</article>
+
 
     <section id="about">
       <h2 style="margin-top:28px">About Me</h2>
